Changelog
=========


1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0.0 (2014-02-06)
------------------

- Initial implementation.
  [jone]